static/css/style.less
//
// base.less
// =========
// A set of styles that give the page its detailed visual style.
//

@import '../vendor/lesshat/lesshat';
@import 'utils';
@import 'variables';


// Variables
// =========

@brand-green : #45AF66;
@brand-brown : #504438;
@brand-tan   : #B6B0AB;

@default-text-color : @brand-brown;
@muted-text-color   : @brand-tan;

@brand-font-size-1 : 28px;
@brand-font-size-2 : 24px;
@brand-font-size-3 : 20px;
@brand-font-size-4 : 16px;
@brand-font-size-5 : 14px;

@component-lr-padding : 20px;


// Styles
// ======

body {
  .default-font();
}

.header {

  &.primary {
    background-color : @brand-green;
    color            : white;
    font-size        : @brand-font-size-1;
    font-weight      : 600;
    letter-spacing   : 1px;
    padding          : 14px @component-lr-padding 0;

    .title {
      font-size   : @brand-font-size-2;
      font-weight : 300;
      line-height : 1.2;
      opacity     : 0.85;

      span {
        border-bottom : 1px dashed fade(white, 75%);
        cursor        : pointer;

        &:hover {
          border-bottom-style : solid;
        }
      }
    }
  }

  &.secondary {
    .box-shadow(0 1px 3px fade(black, 25%));
    background-color : white;
    border-bottom    : 1px solid fade(black, 35%);
    color            : @default-text-color;
    font-size        : @brand-font-size-3;
  }
}

.panels {

  .panel {

    &.right {
      overflow : hidden; // To prevent box-shadows from leaking.

      .header {
        border-left : 1px solid fade(black, 15%);
      }

      .map {
        border-left : 1px solid white;
      }
    }
  }
}

.search {
  @width-of-label           : 140px;
  @width-of-recenter-button : 40px;

  height : 100%;

  label {
    cursor         : pointer;
    float          : left;
    font-size      : @brand-font-size-4;
    font-weight    : bold;
    width          : @width-of-label;
    text-align     : center;
    opacity        : 0.75;
    padding        : 0;
    text-transform : uppercase;
  }

  .input {
    @input-margin : 10px;
    @input-height : calc(~"100% - 20px");

    .transition(background @animation-duration);
    background : fade(white, 75%);
    border     : none;
    float      : left;
    font-size  : @brand-font-size-3;
    height     : 100%;
    outline    : none;
    width      : calc(~"100% - @{width-of-label}");

    &.focus {
      background : white;
    }

    .recenter-button {
      .transform(translateY(-50%));
      cursor       : pointer;
      display      : none;
      line-height  : 1;
      margin-right : @input-margin;
      padding      : 10px 0;
      position     : absolute;
      right        : 0;
      top          : 50%;
      width        : @width-of-recenter-button;
      text-align   : center;

      &.is-enabled {
        display : block;
        color   : @muted-text-color;

        &:hover {
          color : @default-text-color;
        }

        &:active {
          margin-top : 1px;
        }
      }
    }

    input {
      @border-width                : 1px;
      @extra-border-width-on-focus : 1px;
      @padding-left                : 10px;

      .border-radius(3px);
      .default-font();
      background  : none;
      border      : @border-width solid fade(@brand-brown, 25%);
      color       : #111;
      cursor      : pointer;
      display     : block;
      font-size   : @brand-font-size-4;
      font-weight : bold;
      height      : @input-height;
      line-height : 1.4;
      margin      : @input-margin @input-margin @input-margin 0;
      outline     : none;
      padding     : 0 @width-of-recenter-button 0 @padding-left;
      width       : calc(~"100% - @{padding-left}");

      .placeholder-text(@muted-text-color, 300);

      &:focus {
        border-color : fade(@brand-brown, 75%);
        border-width : @border-width + @extra-border-width-on-focus;
        padding      : 0 (@width-of-recenter-button - @extra-border-width-on-focus) 0 (@padding-left - @extra-border-width-on-focus);
      }
    }
  }
}

.footer {
  .box-shadow(0 -1px 3px fade(black, 25%));
  background  : white;
  color       : @default-text-color;
  font-size   : @brand-font-size-5;
  padding     : 0 @component-lr-padding;

  .bottom-text {

    .dot-separator {
      color       : @muted-text-color;
      font-weight : 300;
      margin      : 0 3px;
    }

    .author-link {
      color           : @muted-text-color;
      font-weight     : 300;
      text-decoration : none;

      &:hover {
        text-decoration : underline;
      }
    }
  }

  .footer-buttons {

    .footer-button {

      @button-bg-color               : #F5F0EC;
      @button-border-color           : #DBD4CC;
      @button-icon-margin            : 5px;
      @button-icon-opacity           : 0.75;
      @button-impressed-color        : @brand-brown;
      @button-impressed-border-color : darken(@button-impressed-color, 15%);
      @button-margin                 : 5px;

      // Styles
      // ------

      .border-radius(3px);
      .transition(none);
      background      : @button-bg-color;
      border          : 1px solid @button-border-color;
      cursor          : pointer;
      font-size       : @brand-font-size-4;
      line-height     : @footer-height - 2 * (@button-margin + 1);
      margin          : @button-margin 0 @button-margin @button-margin;
      padding         : 0 @component-lr-padding;
      text-decoration : none;

      // Exceptions
      // ----------

      &:first-child {
        margin-left : 0;
      }

      // States
      // ------

      &:hover {
        background-color : lighten(@button-bg-color, 2%);
      }

      &:active {

        .footer-button-content {
          .transform(translateY(1px));
        }
      }

      &.is-impressed {
        background-color : @button-impressed-color;
        border-color     : @button-impressed-border-color;
        color            : white;

        .show-by-default {
          display : none;
        }

        .show-when-impressed {
          display : block;

          &span {
            display : inline-block;
          }
        }
      }

      // Children
      // --------

      .show-by-default {
        display : initial;
      }

      .show-when-impressed {
        display : none;
      }

      .footer-button-icon {
        margin-right : @button-icon-margin;
        opacity      : @button-icon-opacity;
      }
    }
  }
}


// Facebook 'Like' Button
// ======================

.fb-like.fb_iframe_widget {
  margin-right : 5px;

  span {
    // Ugh, Facebook programmatically resets this to bottom, so we have to fight fire with fire (hence the !important).
    vertical-align : middle !important;
  }
}


// Device-Dependent Styles
// =======================

@media(max-width : 768px) {

  .header {

    &.primary {
      font-size   : 20px;
      padding-top : 10px;

      .title {
        font-size : 18px;
      }
    }
  }

  .search {

    label {
      display : none;
    }

    .input {
      @input-margin : 10px;

      display : block;
      float   : none;
      width   : auto;

      input {
        @padding-left  : 10px;
        @padding-right : 10px;

        display : block;
        margin  : @input-margin;
        width   : calc(~"100% - @{padding-left} - @{padding-right}");
      }
    }
  }
}

